--- a/views/maps.ejs
+++ b/views/maps.ejs
@@ -4,6 +4,6 @@
 <div id="map" class="map"></div>
 
 <script src="/js/map.js"></script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAXX_aGJmbnJJlnwjRAHuVi6DRcfCfnV40&callback=myMap"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=yourMapsAPIkey&callback=myMap"></script>
 
 <%- include('partials/footer') %>
